3.4
	+ Avoid to show two 'module not enabled' messages in composites
	+ All non external exceptions from normal requests are now shown
	  in the UI with the stack trace to report as a bug
	+ All non external exceptions from AJAX requests are now shown in
	  the UI with the stack trace to report as a bug
	+ Template exceptions in normal requests are now handled in webadmin
	+ Set templated files encoding to UTF-8
	+ Send Perl warnings to Zentyal log file in webadmin app
	+ Added keepFile parameter to EBox::Downloader::CGI::FromTempDir
	+ Remove idle and dead code from EBox::Module::Service::writeConfFile
	+ Added auditable property to EBox::Model::DataTable
	+ Added HAProxyPreSetConf to HaProxy::ServiceBase
	+ Moved management of webadmin certificate to HAProxy module
	+ Enable ReverseProxy middleware always
	+ MySQL is restarted before creating database
	+ Use root ownership for webadmin certificates
	+ Execute change hostname actions only if the hostname has really changed
	+ Don't expire session on finish software wizard page
	+ Fixed show help JS to avoid to have help elements with different
	  show state
	+ Use window.location.replace instead of window.location.href
	  to redirect using JS
	+ In EBox::Type::Select, use element value as printableValue for
	  unknown options or options without printableValue
	+ Save haproxy config as changed after webadmin's initialSetup
	+ Send restartUI flag to restart service when restarting a module
	  from the UI
	+ Fix calculation of page number when using go to last page control
	+ Update tracker url in dashboard widget
	+ Continue installation without ads if there is a error getting them
	+ Added EBox::WebAdmin::Middleware::SubAppAuth to validate
	  WebAdmin sub-app requests
	+ Ported restricted resources to use nginx
	+ Removed EBox::Base::upload method because that's 100% handled by Plack
	  now.
	+ Increased the buffer size for uwsgi applications to allow big submits
	  like the one from automatic error report