@@ -69,6 +69,12 @@ sub initialSetup
 {
     my ($self, $version) = @_;
 
+    # Force set of apparmor profile when installing for the first time
+    # to avoid error in the updateMysqlConf() call
+    unless ($version) {
+        $self->_setAppArmorProfiles();
+    }
+
     # Make sure the MySQL conf file is correct
     my $db = EBox::DBEngineFactory::DBEngine();
     $db->updateMysqlConf();
@@ -84,6 +90,29 @@ sub depends
     my $mods = $self->global()->modInstancesOfType('EBox::LogObserver');
     my @names = map ($_->{name}, @$mods);
     return \@names;
+}
+
+# Method: appArmorProfiles
+#
+#   Overrides to set the own AppArmor profile
+#
+# Overrides:
+#
+#   <EBox::Module::Base::appArmorProfiles>
+#
+sub appArmorProfiles
+{
+    my ($self) = @_;
+
+    EBox::info('Setting mysqld apparmor profile');
+    return [
+        {
+         'binary' => 'usr.sbin.mysqld',
+         'local'  => 1,
+         'file'   => 'core/apparmor-mysqld.local.mas',
+         'params' => [],
+        }
+    ];
 }
 
 sub _daemons
