@@ -2,7 +2,6 @@
 	+ Updated EBox::Users::Model::Password to use
 	  EBox::Usercorner::updateSessionPassword method and the new samba
 	  location
-	+ Added local apparmor profile for mysqld
 	+ Stop changing users and contacts' cn field on object edition, allowed to
 	  edit the displayName field, just as Windows does
 	+ Disable OpenLDAP users sync in favor of Samba AD replication
